pdp-ui/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: pdp-ui-service
spec:
  selector:
    app: pdp-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
